# Sunchaserjuly27

./: .env.template  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  discover_staging.py  generate_photo_requirements.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_uvicorn.cmd  set-gcp-b64.ps1  test_end_to_end.py  test_frontend_improvements.py  test_results_summary.py  test_staging.ps1  tmp_debug_etag.py
.tmp-pin-test/: pyvenv.cfg
Backend/: main.py
Frontend/: README.md  pubspec.yaml
docs/: # python.md  CONTENT_STRATEGY.md  DEVELOPMENT.md  INLINE_TODO_ISSUES.md  MAINTAINER_SMOKE_README.md  PROGRESS_LOG.md  TODO_CONSOLIDATED.md  UNSPLASH_API_README.md  UNSPLASH_APPLICATION_MATERIALS.md  UNSPLASH_FRONTEND_EXAMPLE.md  UNSPLASH_IMPLEMENTATION.md  UNSPLASH_INTEGRATION.md  UNSPLASH_PRODUCTION_CHECKLIST.md  UNSPLASH_PR_SUMMARY.md  dev-testing.md  mvp_roadmap.md  openapi-examples.md  plan_vertical_slice.md
issues/: phase-b-production-polish.md  sprint-0-setup.md  sprint-1-data-engine.md  sprint-2-ui-mvp.md
middleware/: __init__.py
models/: __init__.py
routers/: __init__.py
scripts/: README.md  create_github_issues.sh  debug_etag.py  gh-ci.ps1  run_backend_prod_cors.ps1  run_pytest_timeout.py  seed_forecasts.ps1  set_gcp_b64.ps1
services/: __init__.py
tools/: build_list.txt  flutter_version.txt  last_test_output.txt  normalize_workflows.py  remove_bom.py  run_with_timeout.ps1  yamllint_report_after.txt  yamllint_report_after3.txt  (+5 more)
(+133 files in other folders)
