[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sunshine-backend"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "prometheus-client>=0.16.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Backend*"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["Backend"]
filterwarnings = [
  "ignore::DeprecationWarning:fastapi.*",
  "ignore::DeprecationWarning:starlette.*",
]
addopts = "--timeout=30 --timeout-method=thread --showlocals"
